# gum-system

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  gum-cmake-gen.conf
examples/: CMakeLists.txt  FilesystemTests.cpp  TestBot.cpp  ThreadPool.cpp
src/: CMakeLists.txt  Config.cmake.in  gum-discord.h  gum-system.h
src/Discord/: Bot.cpp  Bot.h  Snowflake.h  Utils.cpp  Utils.h
src/System/: Curses.cpp  Curses.h  Display.cpp  Display.h  Event.h  File.cpp  File.h  Filesystem.cpp  Filesystem.h  FramebufferConfig.h  GLContext.cpp  GLContext.h  MemoryManagement.h  Monitor.cpp  Monitor.h  Output.cpp  Output.h  System.cpp  System.h  Terminal.cpp  Terminal.h  ThreadPool.cpp  ThreadPool.h  Window.cpp  Window.h  WindowEvents.cpp
src/System/DefaultIcon/: icon128.h  icon22.h  icon32.h  icon48.h  icon64.h
src/System/IO/: Controls.cpp  Controls.h  Keyboard.cpp  Keyboard.h  KeyboardEvents.cpp  Mouse.cpp  Mouse.h  MouseEvents.cpp
